crates/chatters-lib/src/snapshots/chatters_lib__commands__tests__index_or_string_from_str.snap
---
source: crates/chatters-lib/src/commands.rs
expression: "IndexOrString::from_str(\"1\")"
---
Ok(
    Index(
        1,
    ),
)
