crates/chatters-lib/src/snapshots/chatters_lib__commands__tests__last_part_of_shell_string-5.snap
---
source: crates/chatters-lib/src/commands.rs
expression: "last_part_of_shell_string(\"'abc' 'foo\")"
---
"'foo"
