crates/chatters-lib/src/snapshots/chatters_lib__commands__tests__last_part_of_shell_string.snap
---
source: crates/chatters-lib/src/commands.rs
expression: "last_part_of_shell_string(\"abc\")"
---
"abc"
