crates/chatters-lib/src/snapshots/chatters_lib__commands__tests__list_completion-2.snap
---
source: crates/chatters-lib/src/commands.rs
expression: "complete_from_list(\"foo\", &list)"
---
[
    Completion {
        display: "foo",
        append: "",
    },
]
